[package]
name = "pastebin-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
home = "0.5.5"
reqwest = { version = "0.11.22", features = ["json"] }
rpassword = "7.2.0"
tokio = { version = "1.33.0", features = ["full"] }
